2006-07-17  Michael Smith  <msmith@fluendo.com>

	* configure.ac:
	  Add new makefile to configure.ac

2006-07-17  Michael Smith  <msmith@fluendo.com>

	* flumotion/component/misc/Makefile.am:
	* flumotion/component/misc/gdptestsrc/Makefile.am:
	* flumotion/component/misc/gdptestsrc/Makefile.in:
	* flumotion/component/misc/gdptestsrc/__init__.py:
	* flumotion/component/misc/gdptestsrc/gdptestsrc.py:
	* flumotion/component/misc/gdptestsrc/gdptestsrc.xml:
	  Add gdptestsrc element which uses a tcpclientsrc ! gdpdepay pipeline
	  to feed a flumotion flow.

2006-07-17  Michael Smith  <msmith@fluendo.com>

	* flumotion/manager/component.py:
	  Remove superfluous exclamation marks.

2006-07-17  Michael Smith  <msmith@fluendo.com>

	* flumotion/manager/component.py:
	  Downstream connection doesn't work reliably currently due to races.
	  Change to upstream for now so we can do testing.

2006-07-14  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/component/consumers/httpstreamer/http.py:
	  add more debugging about burst-on-connect

2006-07-14  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/component/feedcomponent010.py:
	  log the first buffer probe at debug level, and all the others
	  at log, since we do not want to clutter our logs.
	  In the future, we may want to also go back to debug level after
	  a reconnect

2006-07-14  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/component/feedcomponent010.py:
	  move the buffer frequency callLater start to a later stage than
	  init.  Fixes tests for twisted 2.0.1 and 2.1.0

2006-07-14  Michael Smith  <msmith@fluendo.com>

	* flumotion/manager/component.py:
	  Commit patch I wrote in my dream last night: clear happydefers
	  correctly.

2006-07-14  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/component/bouncers/htpasswdcrypt.py:
	* flumotion/component/bouncers/saltsha256.py:
	  fix debugging
