@@ -1,3 +1,14 @@
+2006-07-19  Thomas Vander Stichele  <thomas at apestaart dot org>
+
+	* flumotion/manager/worker.py:
+	* flumotion/worker/main.py:
+	* flumotion/worker/worker.py:
+	  If feederports is specified in XML, but empty, then do not start
+	  a feedserver.
+	  Ideally, we should rename the option to something more generic,
+	  and allow for not starting a FeedServer.
+	  Closes #415.
+
 2006-07-17  Michael Smith  <msmith@fluendo.com>
 
 	* configure.ac:
